Made some updates

--- a/client/templates/body/dragger/mode/element/element.html
+++ b/client/templates/body/dragger/mode/element/element.html
@@ -4,5 +4,5 @@
 	<div class="style value" contenteditable>{{value}}</div>
 {{/each}}
 <div class="header">content</div>
-<div class="content value" contenteditable>{{content}}</div>
+<div class="content value" contenteditable for="content">{{content}}</div>
 </template>
