Changed double click for style actions to icon buttons

--- a/client/templates/body/dragger/dragger.styl
+++ b/client/templates/body/dragger/dragger.styl
@@ -69,6 +69,7 @@ transition()
 #editor > div.value
 #editor > div.header
 #editor > div.name
+#editor > div.button
 	text-shadow 1px 1px rgba(255,255,255,1)
 	transition color 100ms ease-in-out
 
@@ -76,7 +77,7 @@ transition()
 	font-family "Source Code Pro", "Courier New", Courier, monospace 
 	font-size 14px
 	line-height 20px
-	max-width editor-width
+	min-width 40px
 	border 0px
 	background-color transparent
 	color #aaa
