Fixed style update issues Reparenting requires Alt key

--- a/client/templates/body/dragger/dragger.html
+++ b/client/templates/body/dragger/dragger.html
@@ -1,13 +1,15 @@
 <template name='dragger'>
-	<div id='overlay'>
-	</div>
+	<div id='apphatch'>
+		<div id='overlay'>
+		</div>
 
-	<div id="editor" class="{{position}}">
-	{{#with element}}
-		<div class="header mode">{{mode}}</div>
-		{{> UI.dynamic template=modeTemplate}}
-	{{/with}}
-	</div>
+		<div id="editor" class="{{position}}">
+		{{#with element}}
+			<div class="header mode">{{mode}}</div>
+			{{> UI.dynamic template=modeTemplate}}
+		{{/with}}
+		</div>
 
-	{{> chapp_form}}
+		{{> chapp_form}}
+	</div>
 </template>
