--- a/client/templates/body/dragger/dragger.styl
+++ b/client/templates/body/dragger/dragger.styl
@@ -9,6 +9,9 @@ transition()
 	-o-transition arguments
 	transition arguments
 
+#apphatch *
+	z-index 2147483647
+
 #editor
 	top 0px
 	width editor-width
