Added user accounts. Only admininstrators and users that have 'edit-app' as a role can modify elements and source code Default user is 'admin' with password 'password' Exposed two new methods: allowUserTo and banUserFrom Updated to Meteor 1.0.4.1

--- a/client/templates/body/dragger/dragger.html
+++ b/client/templates/body/dragger/dragger.html
@@ -3,6 +3,7 @@
 		<div id='overlay'>
 		</div>
 
+		{{#if isInRole 'admin,edit-app'}}
 		<div id="editor" class="{{position}}">
 		{{#with element}}
 			<div class="header mode">{{mode}}</div>
@@ -11,5 +12,10 @@
 		</div>
 
 		{{> chapp_form}}
+		{{/if}}
+		
+		<div class="{{position}}">
+		{{> loginButtons}}
+		</div>
 	</div>
 </template>
