Added color picker to style values

--- a/client/templates/body/dragger/dragger.styl
+++ b/client/templates/body/dragger/dragger.styl
@@ -10,7 +10,8 @@ transition()
 	transition arguments
 
 #apphatch *
-	z-index 2147483647
+.sp-container
+	z-index 2147483647 !important
 
 #editor
 	top 0px
