--- a/client/templates/body/dragger/mode/element/element.styl
+++ b/client/templates/body/dragger/mode/element/element.styl
@@ -7,3 +7,11 @@ div.button i
 
 div.button i:hover
 	color rgba(0,0,0,0.5)
+
+#editor a
+	text-decoration none
+	cursor pointer
+	color inherit
+
+#editor div.style.value a:hover
+	text-decoration underline
