--- a/client/templates/body/hatchery/hatchery.html
+++ b/client/templates/body/hatchery/hatchery.html
@@ -8,7 +8,7 @@
 				{{/each}}
 
 			{{else}}
-			<div id='{{_id}}' style="{{getStyle}}">
+			<div _id='{{_id}}' style="{{getStyle}}">
 
 				{{> hatchery}}
 				
