--- a/client/templates/body/body.html
+++ b/client/templates/body/body.html
@@ -1,6 +1,6 @@
 <head>
 	<meta name="viewport" content="user-scalable=yes, initial-scale=1"/>
-	<link href='http://fonts.googleapis.com/css?family=Syncopate:400,700|Source+Code+Pro:200|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='fonts.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
