More fixes for style editor

--- a/client/templates/body/dragger/dragger.styl
+++ b/client/templates/body/dragger/dragger.styl
@@ -96,7 +96,7 @@ a.login-link-text
 a.login-link-text
 #editor div.name
 #editor div.header
-	font-family Syncopate, arial, helvetica, sans-serif
+	font-family Syncopate, sans-serif
 	font-size 16px 
 	margin-top 20px
 
