Added color picker, up/down arrows increment/decrement numeric values, Added @aldeed autoform, bootstrap, android support, General bug fixes

--- a/client/templates/body/dragger/dragger.html
+++ b/client/templates/body/dragger/dragger.html
@@ -1,10 +1,10 @@
 <template name='dragger'>
-	<div id='apphatch'>
+	<div id='apphatch' class="{{position}} {{dragging}}">
 		<div id='overlay'>
 		</div>
 
 		{{#if isInRole 'admin,edit-app'}}
-		<div id="editor" class="{{position}}">
+		<div id="editor">
 		{{#with element}}
 			<div class="header mode">{{mode}}</div>
 			{{> UI.dynamic template=modeTemplate}}
@@ -14,8 +14,6 @@
 		{{> chapp_form}}
 		{{/if}}
 		
-		<div class="{{position}}">
 		{{> loginButtons}}
-		</div>
 	</div>
 </template>
