--- a/client/templates/body/body.html
+++ b/client/templates/body/body.html
@@ -1,5 +1,5 @@
 <head>
-	<meta name="viewport" content="user-scalable=yes, initial-scale=1"/>
+	<meta name="viewport" content="user-scalable=no, initial-scale=1"/>
 	<link href='fonts.css' rel='stylesheet' type='text/css'>
 </head>
 
