--- a/client/templates/body/dragger/chapp.styl
+++ b/client/templates/body/dragger/chapp.styl
@@ -1,3 +1,5 @@
+trans-time = 0.2s
+
 chapp_wrapper *
 	box-sizing border-box
 
@@ -9,7 +11,6 @@ chapp_wrapper *
 	right 0px
 	position fixed !important
 	padding 0px
-	padding-right 100px
 
 #chapp_text
 	position fixed !important
